@@ -1,7 +1,7 @@
 /*
  * The Exomiser - A tool to annotate and prioritize genomic variants
  *
- * Copyright (c) 2016-2018 Queen Mary University of London.
+ * Copyright (c) 2016-2021 Queen Mary University of London.
  * Copyright (c) 2012-2016 Charité Universitätsmedizin Berlin and Genome Research Ltd.
  *
  * This program is free software: you can redistribute it and/or modify
@@ -20,7 +20,6 @@
 
 package org.monarchinitiative.exomiser.core.genome;
 
-import com.google.common.collect.ImmutableList;
 import htsjdk.tribble.TribbleException;
 import htsjdk.variant.variantcontext.VariantContext;
 import htsjdk.variant.vcf.VCFHeader;
@@ -35,6 +34,7 @@ import static java.util.stream.Collectors.toList;
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 /**
  * @author Jules Jacobsen <j.jacobsen@qmul.ac.uk>
@@ -84,6 +84,33 @@ public class VcfFilesTest {
     public void testReadVcfHeader() {
         Path vcfPath = Paths.get("src/test/resources/altAllele.vcf");
         VCFHeader header = VcfFiles.readVcfHeader(vcfPath);
-        assertThat(header.getGenotypeSamples(), equalTo(ImmutableList.of("sample")));
+        assertThat(header.getGenotypeSamples(), equalTo(List.of("sample")));
+    }
+
+    @Test
+    public void testReadSampleIdentifiersNullPath() {
+        List<String> sampleIdentifiers = VcfFiles.readSampleIdentifiers(null);
+        assertTrue(sampleIdentifiers.isEmpty());
+    }
+
+    @Test
+    public void testReadSampleIdentifiersNonExistentFile() {
+        Path vcfPath = Paths.get("src/test/resources/wibble.vcf");
+        List<String> sampleIdentifiers = VcfFiles.readSampleIdentifiers(vcfPath);
+        assertTrue(sampleIdentifiers.isEmpty());
+    }
+
+    @Test
+    public void testReadSampleIdentifiers() {
+        Path vcfPath = Paths.get("src/test/resources/altAllele.vcf");
+        List<String> samples = VcfFiles.readSampleIdentifiers(vcfPath);
+        assertThat(samples, equalTo(List.of("sample")));
+    }
+
+    @Test
+    public void testReadMultipleSampleIdentifiers() {
+        Path vcfPath = Paths.get("src/test/resources/multiSampleWithProbandHomRef.vcf");
+        List<String> expected = List.of("Seth", "Adam", "Eva");
+        assertThat(VcfFiles.readSampleIdentifiers(vcfPath), equalTo(expected));
     }
 }
