@@ -1,7 +1,7 @@
 /*
  * The Exomiser - A tool to annotate and prioritize genomic variants
  *
- * Copyright (c) 2016-2018 Queen Mary University of London.
+ * Copyright (c) 2016-2021 Queen Mary University of London.
  * Copyright (c) 2012-2016 Charité Universitätsmedizin Berlin and Genome Research Ltd.
  *
  * This program is free software: you can redistribute it and/or modify
@@ -22,11 +22,11 @@ package org.monarchinitiative.exomiser.core.model;
 
 import de.charite.compbio.jannovar.annotation.VariantEffect;
 import org.junit.jupiter.api.Test;
-import org.monarchinitiative.exomiser.core.genome.GenomeAssembly;
 
-import java.util.Collections;
+import java.util.List;
 
 import static org.hamcrest.CoreMatchers.equalTo;
+import static org.hamcrest.CoreMatchers.sameInstance;
 import static org.hamcrest.MatcherAssert.assertThat;
 
 /**
@@ -36,105 +36,18 @@ public class VariantAnnotationTest {
 
     @Test
     public void empty() {
-        VariantAnnotation instance = VariantAnnotation.builder()
-                .genomeAssembly(GenomeAssembly.HG19)
-                .chromosome(0)
-                .chromosomeName("")
-                .position(0)
-                .ref("")
-                .alt("")
-                .geneId("")
-                .geneSymbol("")
-                .variantEffect(VariantEffect.SEQUENCE_VARIANT)
-                .annotations(Collections.emptyList())
-                .build();
-        assertThat(VariantAnnotation.empty(), equalTo(instance));
+        VariantAnnotation instance = VariantAnnotation.of("", "", VariantEffect.SEQUENCE_VARIANT, List.of());
+        assertThat(instance, sameInstance(VariantAnnotation.empty()));
     }
 
     @Test
-    public void assembly() {
-        VariantAnnotation instance = VariantAnnotation.builder()
-                .genomeAssembly(GenomeAssembly.HG38)
-                .build();
-        assertThat(instance.getGenomeAssembly(), equalTo(GenomeAssembly.HG38));
-    }
-
-    @Test
-    public void getChromosome() {
-        VariantAnnotation instance = VariantAnnotation.builder()
-                .chromosome(23)
-                .build();
-        assertThat(instance.getChromosome(), equalTo(23));
-    }
-
-    @Test
-    public void getChromosomeName() {
-        VariantAnnotation instance = VariantAnnotation.builder()
-                .chromosomeName("MT")
-                .build();
-        assertThat(instance.getChromosomeName(), equalTo("MT"));
-    }
-
-    @Test
-    public void position() {
-        VariantAnnotation instance = VariantAnnotation.builder()
-                .position(123456)
-                .build();
-        assertThat(instance.getPosition(), equalTo(123456));
-    }
-
-    @Test
-    public void ref() {
-        VariantAnnotation instance = VariantAnnotation.builder()
-                .ref("A")
-                .build();
-        assertThat(instance.getRef(), equalTo("A"));
-    }
-
-    @Test
-    public void alt() {
-        VariantAnnotation instance = VariantAnnotation.builder()
-                .alt("T")
-                .build();
-        assertThat(instance.getAlt(), equalTo("T"));
-    }
-
-    @Test
-    public void getGeneId() {
-        VariantAnnotation instance = VariantAnnotation.builder()
-                .geneId("ENSG:12233455")
-                .build();
-        assertThat(instance.getGeneId(), equalTo("ENSG:12233455"));
-    }
-
-    @Test
-    public void getGeneSymbol() {
-        VariantAnnotation instance = VariantAnnotation.builder()
-                .geneSymbol("GENE1")
-                .build();
+    public void notEmpty() {
+        VariantAnnotation instance = VariantAnnotation.of("GENE1", "HGNC:12345", VariantEffect.SEQUENCE_VARIANT, List.of());
         assertThat(instance.getGeneSymbol(), equalTo("GENE1"));
+        assertThat(instance.getGeneId(), equalTo("HGNC:12345"));
+        assertThat(instance.getVariantEffect(), equalTo(VariantEffect.SEQUENCE_VARIANT));
+        assertThat(instance.getTranscriptAnnotations(), equalTo(List.of()));
+        assertThat(instance.hasTranscriptAnnotations(), equalTo(false));
     }
 
-    @Test
-    public void getVariantEffect() {
-        VariantAnnotation instance = VariantAnnotation.builder()
-                .variantEffect(VariantEffect.MISSENSE_VARIANT)
-                .build();
-        assertThat(instance.getVariantEffect(), equalTo(VariantEffect.MISSENSE_VARIANT));
-    }
-
-    @Test
-    public void getAnnotations() {
-        VariantAnnotation instance = VariantAnnotation.builder()
-                .annotations(Collections.singletonList(TranscriptAnnotation.empty()))
-                .build();
-        assertThat(instance.getTranscriptAnnotations(), equalTo(Collections.singletonList(TranscriptAnnotation.empty())));
-    }
-
-    @Test
-    public void testToString() throws Exception {
-        System.out.println(VariantAnnotation.empty());
-        assertThat(VariantAnnotation.empty()
-                .toString(), equalTo("VariantAnnotation{genomeAssembly=hg19, chromosome=0, chromosomeName='', position=0, ref='', alt='', geneSymbol='', geneId='', variantEffect=SEQUENCE_VARIANT, annotations=[]}"));
-    }
 }
