@@ -1,7 +1,7 @@
 /*
  * The Exomiser - A tool to annotate and prioritize genomic variants
  *
- * Copyright (c) 2016-2019 Queen Mary University of London.
+ * Copyright (c) 2016-2021 Queen Mary University of London.
  * Copyright (c) 2012-2016 Charité Universitätsmedizin Berlin and Genome Research Ltd.
  *
  * This program is free software: you can redistribute it and/or modify
@@ -25,9 +25,6 @@
  */
 package org.monarchinitiative.exomiser.core.model;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
 import de.charite.compbio.jannovar.annotation.VariantEffect;
 import de.charite.compbio.jannovar.mendel.ModeOfInheritance;
 import de.charite.compbio.jannovar.pedigree.Genotype;
@@ -36,18 +33,24 @@ import htsjdk.variant.variantcontext.VariantContext;
 import htsjdk.variant.variantcontext.VariantContextBuilder;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
 import org.monarchinitiative.exomiser.core.filters.FilterResult;
 import org.monarchinitiative.exomiser.core.filters.FilterType;
 import org.monarchinitiative.exomiser.core.genome.GenomeAssembly;
+import org.monarchinitiative.exomiser.core.genome.TestFactory;
 import org.monarchinitiative.exomiser.core.model.frequency.Frequency;
 import org.monarchinitiative.exomiser.core.model.frequency.FrequencyData;
 import org.monarchinitiative.exomiser.core.model.frequency.FrequencySource;
-import org.monarchinitiative.exomiser.core.model.frequency.RsId;
 import org.monarchinitiative.exomiser.core.model.pathogenicity.*;
+import org.monarchinitiative.svart.Variant;
+import org.monarchinitiative.svart.*;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
-import static org.hamcrest.CoreMatchers.*;
+import static org.hamcrest.CoreMatchers.equalTo;
+import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.lessThan;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -64,6 +67,7 @@ public class VariantEvaluationTest {
 
     private static final GenomeAssembly GENOME_ASSEMBLY = GenomeAssembly.HG19;
     private static final int CHROMOSOME = 1;
+    private static final Contig CHR1 = GENOME_ASSEMBLY.getContigById(CHROMOSOME);
     private static final String CHROMOSOME_NAME = "1";
     private static final int POSITION = 1;
     private static final String REF = "C";
@@ -108,15 +112,31 @@ public class VariantEvaluationTest {
     }
 
     private VariantEvaluation newInstance() {
-        return VariantEvaluation.builder(CHROMOSOME, POSITION, REF, ALT)
+        return VariantEvaluation.builder()
+                .with(CHR1, "", Strand.POSITIVE, CoordinateSystem.FULLY_CLOSED, Position.of(POSITION), REF, ALT)
+//                .genomeAssembly(GENOME_ASSEMBLY)
                 .quality(QUALITY)
                 .geneSymbol(GENE1_GENE_SYMBOL)
                 .geneId(GENE1_GENE_ID)
                 .build();
     }
 
-    private static VariantEvaluation.Builder testVariantBuilder() {
-        return VariantEvaluation.builder(CHROMOSOME, POSITION, REF, ALT);
+    private VariantEvaluation.Builder testVariantBuilder() {
+        return VariantEvaluation.builder()
+                .with(CHR1, "", Strand.POSITIVE, CoordinateSystem.FULLY_CLOSED, Position.of(POSITION), REF, ALT);
+//                .genomeAssembly(GENOME_ASSEMBLY);
+    }
+
+    private VariantEvaluation.Builder newBuilder(int chr, int pos, String ref, String alt) {
+        return VariantEvaluation.builder()
+                .with(GENOME_ASSEMBLY.getContigById(chr), "", Strand.POSITIVE, CoordinateSystem.FULLY_CLOSED, Position.of(pos), ref, alt);
+//                .genomeAssembly(GenomeAssembly.HG19);
+    }
+
+    private VariantEvaluation.Builder newBuilder(int chr, int start, int end, String ref, String alt, int changeLength) {
+        return VariantEvaluation.builder()
+                .with(GENOME_ASSEMBLY.getContigById(chr), "", Strand.POSITIVE, CoordinateSystem.FULLY_CLOSED, Position.of(start), Position.of(end), ref, alt, changeLength);
+//                .genomeAssembly(GenomeAssembly.HG19);
     }
 
     @Test
@@ -126,88 +146,80 @@ public class VariantEvaluationTest {
 
     @Test
     public void testSpecifiedGenomeAssembly() {
-        VariantEvaluation variantEvaluation = VariantEvaluation.builder(CHROMOSOME, POSITION, REF, ALT)
+        Contig contig = GenomeAssembly.HG38.getContigById(CHROMOSOME);
+
+        VariantEvaluation variantEvaluation = VariantEvaluation.builder()
+                .with(contig, "", Strand.POSITIVE, CoordinateSystem.FULLY_CLOSED, Position.of(POSITION), REF, ALT)
                 .genomeAssembly(GenomeAssembly.HG38)
                 .build();
         assertThat(variantEvaluation.getGenomeAssembly(), equalTo(GenomeAssembly.HG38));
     }
 
     @Test
-    public void testSpecifiedGenomeAssemblyFromValue() {
-        VariantEvaluation variantEvaluation = VariantEvaluation.builder(CHROMOSOME, POSITION, REF, ALT)
-                .genomeAssembly("GRCh38")
-                .build();
-        assertThat(variantEvaluation.getGenomeAssembly(), equalTo(GenomeAssembly.HG38));
-    }
-
-    @Test
-    public void testSpecifiedGenomeAssemblyUnrecognisedAssemblyThrowsException() {
-        assertThrows(RuntimeException.class, () -> VariantEvaluation.builder(CHROMOSOME, POSITION, REF, ALT)
-                .genomeAssembly("wibble")
-        );
-    }
-
-    @Test
     public void testGetChromosome() {
-        assertThat(instance.getChromosome(), equalTo(CHROMOSOME));
+        assertThat(instance.contigId(), equalTo(CHROMOSOME));
     }
 
     @Test
-    public void testGetChromosomeName() {
-        assertThat(instance.getChromosomeName(), equalTo(CHROMOSOME_NAME));
+    public void testGetContig() {
+        assertThat(instance.contigName(), equalTo(CHROMOSOME_NAME));
     }
 
     @Test
-    public void testBuilderChromosomeName() {
-        VariantEvaluation variantEvaluation = testVariantBuilder().chromosomeName("Can be anything").build();
-        assertThat(variantEvaluation.getChromosomeName(), equalTo("Can be anything"));
+    public void testBuilderContig() {
+//        VariantEvaluation variantEvaluation = testVariantBuilder().contig(Contig.unknown()).build();
+//        assertThat(variantEvaluation.getContigName(), equalTo("na"));
     }
 
     @Test
     public void testGetChromosomePosition() {
-        assertThat(instance.getPosition(), equalTo(POSITION));
+        assertThat(instance.start(), equalTo(POSITION));
     }
 
     @Test
     public void testGetRef() {
-        assertThat(instance.getRef(), equalTo(REF));
+        assertThat(instance.ref(), equalTo(REF));
     }
 
     @Test
     public void testGetAlt() {
-        assertThat(instance.getAlt(), equalTo(ALT));
+        assertThat(instance.alt(), equalTo(ALT));
 
     }
 
     @Test
     void testGetIdDefault() {
-        assertThat(instance.getId(), equalTo(""));
+        assertThat(instance.id(), equalTo(""));
     }
 
     @Test
     void testGetId() {
         VariantEvaluation withId = testVariantBuilder().id("WIBBLE").build();
-        assertThat(withId.getId(), equalTo("WIBBLE"));
+        assertThat(withId.id(), equalTo("WIBBLE"));
+    }
+
+    @Test
+    void testGetIdWithNull() {
+        VariantEvaluation withId = testVariantBuilder().id(null).build();
+        assertThat(withId.id(), equalTo(""));
     }
 
     @Test
     void testGeneSymbolCannotBeNull() {
         assertThrows(NullPointerException.class, () ->
                 testVariantBuilder()
-                .geneSymbol(null)
+                        .geneSymbol(null)
                         .build()
         );
 
     }
 
     @Test
-    void testGeneSymbolCannotBeEmpty() {
-        Throwable throwable = assertThrows(IllegalArgumentException.class, () ->
-                testVariantBuilder()
-                        .geneSymbol("")
-                        .build()
-        );
-        assertThat(throwable.getMessage(), containsString("Variant gene symbol cannot be empty"));
+    void testGeneSymbolReplacedByDotIfEmpty() {
+        instance = testVariantBuilder()
+                .geneSymbol("")
+                .build();
+        assertThat(instance.getGeneSymbol(), equalTo("."));
     }
 
     @Test
@@ -224,12 +236,6 @@ public class VariantEvaluationTest {
     }
 
     @Test
-    public void testGetGeneSymbolReturnsADotIfGeneSymbolNotDefined() {
-        instance = testVariantBuilder().build();
-        assertThat(instance.getGeneSymbol(), equalTo("."));
-    }
-
-    @Test
     public void canGetGeneId() {
         assertThat(instance.getGeneId(), equalTo(GENE1_GENE_ID));
     }
@@ -243,17 +249,17 @@ public class VariantEvaluationTest {
     }
 
     @Test
-    void testSampleGenotypeEmptyIsReplacedWithDefault() {
+    void testSamplesEmptyIsReplacedWithDefault() {
         VariantEvaluation variantEvaluation = testVariantBuilder()
-                .sampleGenotypes(Collections.emptyMap())
+                .sampleGenotypes(SampleGenotypes.of())
                 .build();
 
-        assertThat(variantEvaluation.getSampleGenotypes(), equalTo(VariantEvaluation.Builder.SINGLE_SAMPLE_HET_GENOTYPE));
+        assertThat(variantEvaluation.getSampleGenotypes(), equalTo(VariantEvaluation.SINGLE_SAMPLE_DATA_HET_GENOTYPE));
     }
 
     @Test
-    public void testSampleGenotypes() {
-        Map<String, SampleGenotype> sampleGenotypes = ImmutableMap.of("Zaphod", SampleGenotype.of(AlleleCall.REF, AlleleCall.ALT));
+    public void testSamples() {
+        SampleGenotypes sampleGenotypes = SampleGenotypes.of("Zaphod", SampleGenotype.het());
         instance = testVariantBuilder()
                 .sampleGenotypes(sampleGenotypes)
                 .build();
@@ -262,49 +268,40 @@ public class VariantEvaluationTest {
 
     @Test
     public void testGetSampleGenotype() {
-        SampleGenotype sampleGenotype = SampleGenotype.of(AlleleCall.REF, AlleleCall.ALT);
-        Map<String, SampleGenotype> sampleGenotypes = ImmutableMap.of("Zaphod", sampleGenotype);
+        String zaphod = "Zaphod";
+        SampleGenotype sampleGenotype = SampleGenotype.het();
+        SampleGenotypes sampleGenotypes = SampleGenotypes.of(zaphod, sampleGenotype);
         instance = testVariantBuilder()
                 .sampleGenotypes(sampleGenotypes)
                 .build();
-        assertThat(instance.getSampleGenotype("Zaphod"), equalTo(sampleGenotype));
+        assertThat(instance.getSampleGenotype(zaphod), equalTo(sampleGenotype));
         assertThat(instance.getSampleGenotype("Nemo"), equalTo(SampleGenotype.empty()));
     }
 
     @Test
     public void testGetSampleGenotypesAreOrdered() {
-        Map<String, SampleGenotype> sampleGenotypes = ImmutableMap.of(
-                "Zaphod", SampleGenotype.of(AlleleCall.REF, AlleleCall.ALT),
-                "Arthur", SampleGenotype.homRef(),
-                "Trillian", SampleGenotype.homAlt(),
-                "Marvin", SampleGenotype.noCall(),
+        SampleGenotypes sampleGenotypes = SampleGenotypes.of(
+                SampleData.of("Zaphod", SampleGenotype.het()),
+                SampleData.of("Arthur", SampleGenotype.homRef()),
+                SampleData.of("Trillian", SampleGenotype.homAlt()),
+                SampleData.of("Marvin", SampleGenotype.noCall()),
                 // ALT/OTHER_ALT is a 1/2 genotype
-                "Ford", SampleGenotype.of(AlleleCall.ALT, AlleleCall.OTHER_ALT)
+                SampleData.of("Ford", SampleGenotype.of(AlleleCall.ALT, AlleleCall.OTHER_ALT))
         );
 
         instance = testVariantBuilder()
                 .sampleGenotypes(sampleGenotypes)
                 .build();
 
-        List<String> sampleNames = ImmutableList.copyOf(instance.getSampleGenotypes().keySet());
-        assertThat(sampleNames, equalTo(ImmutableList.of("Zaphod", "Arthur", "Trillian", "Marvin", "Ford")));
+        List<String> sampleNames = instance.getSampleGenotypes().stream().map(SampleData::getId).collect(Collectors.toUnmodifiableList());
+        assertThat(sampleNames, equalTo(List.of("Zaphod", "Arthur", "Trillian", "Marvin", "Ford")));
         assertThat(instance.getGenotypeString(), equalTo("0/1:0/0:1/1:./.:-/1"));
     }
 
     @Test
     public void testGetGenotypeNoSampleIsHet() {
-        instance = VariantEvaluation.builder(25, 1, "A", "T").build();
+        instance = TestFactory.variantBuilder(25, 1, "A", "T").build();
         assertThat(instance.getGenotypeString(), equalTo("0/1"));
-    }
-
-    @Test
-    public void testCanSetVariantEffectAfterConstruction() {
-        VariantEvaluation variantEvaluation = testVariantBuilder().variantEffect(VariantEffect.FEATURE_TRUNCATION)
-                .build();
-        assertThat(variantEvaluation.getVariantEffect(), equalTo(VariantEffect.FEATURE_TRUNCATION));
-
-        variantEvaluation.setVariantEffect(VariantEffect.MISSENSE_VARIANT);
-        assertThat(variantEvaluation.getVariantEffect(), equalTo(VariantEffect.MISSENSE_VARIANT));
     }
 
     @Test
@@ -328,7 +325,6 @@ public class VariantEvaluationTest {
         VariantEvaluation variantEvaluation = testVariantBuilder()
                 .annotations(annotations)
                 .build();
-        System.out.println(annotations);
         assertThat(variantEvaluation.getTranscriptAnnotations(), equalTo(annotations));
     }
 
@@ -340,14 +336,14 @@ public class VariantEvaluationTest {
     
     @Test
     public void testThatTheBuilderCanSetAFrequencyDataObject() {
-        FrequencyData frequencyData = FrequencyData.of(RsId.of(12345), Frequency.of(FrequencySource.LOCAL, 0.1f));
+        FrequencyData frequencyData = FrequencyData.of("rs12345", Frequency.of(FrequencySource.LOCAL, 0.1f));
         instance = testVariantBuilder().frequencyData(frequencyData).build();
         assertThat(instance.getFrequencyData(), equalTo(frequencyData));
     }
 
     @Test
     public void testCanSetFrequencyDataAfterConstruction() {
-        FrequencyData frequencyData = FrequencyData.of(RsId.of(12345), Frequency.of(FrequencySource.LOCAL, 0.1f));
+        FrequencyData frequencyData = FrequencyData.of("rs12345", Frequency.of(FrequencySource.LOCAL, 0.1f));
         instance.setFrequencyData(frequencyData);
         assertThat(instance.getFrequencyData(), equalTo(frequencyData));
     }
@@ -474,7 +470,7 @@ public class VariantEvaluationTest {
     @Test
     public void failedFilterTypesForModeAutosomalDominantPassesFilters() {
         instance.addFilterResult(PASS_FREQUENCY_RESULT);
-        instance.setCompatibleInheritanceModes(ImmutableSet.of(ModeOfInheritance.AUTOSOMAL_DOMINANT));
+        instance.setCompatibleInheritanceModes(Set.of(ModeOfInheritance.AUTOSOMAL_DOMINANT));
         assertThat(instance.getFailedFilterTypesForMode(ModeOfInheritance.ANY), equalTo(Collections.emptySet()));
         assertThat(instance.getFailedFilterTypesForMode(ModeOfInheritance.AUTOSOMAL_DOMINANT), equalTo(Collections.emptySet()));
         assertThat(instance.getFailedFilterTypesForMode(ModeOfInheritance.AUTOSOMAL_RECESSIVE), equalTo(EnumSet.of(FilterType.INHERITANCE_FILTER)));
@@ -588,7 +584,7 @@ public class VariantEvaluationTest {
     @Test
     public void filterStatusForModePassedAutosomalDominantOnly() {
         instance.addFilterResult(PASS_QUALITY_RESULT);
-        instance.setCompatibleInheritanceModes(ImmutableSet.of(ModeOfInheritance.AUTOSOMAL_DOMINANT));
+        instance.setCompatibleInheritanceModes(EnumSet.of(ModeOfInheritance.AUTOSOMAL_DOMINANT));
 
         assertThat(instance.getFilterStatusForMode(ModeOfInheritance.ANY), equalTo(FilterStatus.PASSED));
         assertThat(instance.getFilterStatusForMode(ModeOfInheritance.AUTOSOMAL_DOMINANT), equalTo(FilterStatus.PASSED));
@@ -598,7 +594,7 @@ public class VariantEvaluationTest {
     @Test
     public void filterStatusForModePassedAutosomalDominantAndRecessive() {
         instance.addFilterResult(PASS_QUALITY_RESULT);
-        instance.setCompatibleInheritanceModes(ImmutableSet.of(ModeOfInheritance.AUTOSOMAL_DOMINANT, ModeOfInheritance.AUTOSOMAL_RECESSIVE));
+        instance.setCompatibleInheritanceModes(EnumSet.of(ModeOfInheritance.AUTOSOMAL_DOMINANT, ModeOfInheritance.AUTOSOMAL_RECESSIVE));
 
         assertThat(instance.getFilterStatusForMode(ModeOfInheritance.ANY), equalTo(FilterStatus.PASSED));
         assertThat(instance.getFilterStatusForMode(ModeOfInheritance.AUTOSOMAL_DOMINANT), equalTo(FilterStatus.PASSED));
@@ -624,7 +620,7 @@ public class VariantEvaluationTest {
     @Test
     public void filterStatusForFailedModeAutosomalDominantOnly() {
         instance.addFilterResult(FAIL_FREQUENCY_RESULT);
-        instance.setCompatibleInheritanceModes(ImmutableSet.of(ModeOfInheritance.AUTOSOMAL_RECESSIVE));
+        instance.setCompatibleInheritanceModes(EnumSet.of(ModeOfInheritance.AUTOSOMAL_RECESSIVE));
 
         assertThat(instance.getFilterStatusForMode(ModeOfInheritance.ANY), equalTo(FilterStatus.FAILED));
         assertThat(instance.getFilterStatusForMode(ModeOfInheritance.AUTOSOMAL_DOMINANT), equalTo(FilterStatus.FAILED));
@@ -657,32 +653,32 @@ public class VariantEvaluationTest {
     
     @Test
     public void testGetChromosomeName23isX() {
-        instance = VariantEvaluation.builder(23, 1, "A", "T").build();
-        assertThat(instance.getChromosomeName(), equalTo("X"));
+        instance = TestFactory.variantBuilder(23, 1, "A", "T").build();
+        assertThat(instance.contigName(), equalTo("X"));
     }
 
     @Test
     public void testGetChromosomeName24isY() {
-        instance = VariantEvaluation.builder(24, 1, "A", "T").build();
-        assertThat(instance.getChromosomeName(), equalTo("Y"));
+        instance = TestFactory.variantBuilder(24, 1, "A", "T").build();
+        assertThat(instance.contigName(), equalTo("Y"));
     }
 
     @Test
     public void testGetChromosomeName25isMT() {
-        instance = VariantEvaluation.builder(25, 1, "A", "T").build();
-        assertThat(instance.getChromosomeName(), equalTo("MT"));
+        instance = TestFactory.variantBuilder(25, 1, "A", "T").build();
+        assertThat(instance.contigName(), equalTo("MT"));
     }
 
-    @Test
-    public void getVariantContext() {
-        VariantContext builtContext = instance.getVariantContext();
-        assertThat(builtContext.getContig(), equalTo(CHROMOSOME_NAME));
-        assertThat(builtContext.getStart(), equalTo(POSITION));
-        assertThat(builtContext.getEnd(), equalTo(POSITION));
-        assertThat(builtContext.getNAlleles(), equalTo(2));
-        assertThat(builtContext.getReference().getBaseString(), equalTo(instance.getRef()));
-        assertThat(builtContext.getAlternateAllele(instance.getAltAlleleId()).getBaseString(), equalTo(instance.getAlt()));
-    }
+//    @Test
+//    public void getVariantContext() {
+//        VariantContext builtContext = instance.getVariantContext();
+//        assertThat(builtContext.getContig(), equalTo(CHROMOSOME_NAME));
+//        assertThat(builtContext.getStart(), equalTo(POSITION));
+//        assertThat(builtContext.getEnd(), equalTo(POSITION));
+//        assertThat(builtContext.getNAlleles(), equalTo(2));
+//        assertThat(builtContext.getReference().getBaseString(), equalTo(instance.getRef()));
+//        assertThat(builtContext.getAlternateAllele(instance.getAltAlleleId()).getBaseString(), equalTo(instance.getAlt()));
+//    }
 
     @Test
     public void testBuilderVariantContext() {
@@ -691,7 +687,7 @@ public class VariantEvaluationTest {
                 .chr("M").start(1).stop(1).alleles("A", "T")
                 .genotypes(GenotypesContext.create(1))
                 .make();
-        VariantEvaluation variantEvaluation = VariantEvaluation.builder(25, 1, "A", "T")
+        VariantEvaluation variantEvaluation = TestFactory.variantBuilder(25, 1, "A", "T")
                 .variantContext(variantContext)
                 .build();
         assertThat(variantEvaluation.getVariantContext(), equalTo(variantContext));
@@ -769,50 +765,52 @@ public class VariantEvaluationTest {
 
         assertThat(instance.isCompatibleWith(ModeOfInheritance.ANY), is(true));
     }
-    
+
     @Test
     public void testCompareTo() {
         //variants are sorted according to chromosome, position  ref and alt.
-        VariantEvaluation zero = VariantEvaluation.builder(1, 1, "A", "C").build();
-        VariantEvaluation one = VariantEvaluation.builder(1, 2, "A", "G").build();
-        VariantEvaluation two = VariantEvaluation.builder(1, 2, "AC", "G").build();
-        VariantEvaluation three = VariantEvaluation.builder(2, 1, "C", "T").build();
-        VariantEvaluation four = VariantEvaluation.builder(2, 1, "C", "TT").build();
+        VariantEvaluation zero = TestFactory.variantBuilder(1, 1, "A", "C").build();
+        VariantEvaluation one = TestFactory.variantBuilder(1, 2, "A", "G").build();
+        VariantEvaluation two = TestFactory.variantBuilder(1, 2, "AC", "G").build();
+        VariantEvaluation three = TestFactory.variantBuilder(2, 1, "C", "T").build();
+        VariantEvaluation four = TestFactory.variantBuilder(2, 1, "C", "TT").build();
 
         List<VariantEvaluation> variants = Arrays.asList(zero, one, two, three, four);
         Collections.shuffle(variants);
 
-        System.out.println("Shuffled:");
-        variants.forEach(variant -> System.out.printf("chr: %2d pos: %2d ref: %-2s alt: %-2s%n", variant.getChromosome(), variant.getPosition(), variant.getRef(), variant.getAlt()));
+//        System.out.println("Shuffled:");
+//        variants.forEach(variant -> System.out.printf("chr: %2d pos: %2d ref: %-2s alt: %-2s%n", variant.getContigId(), variant
+//                .getStart(), variant.getRef(), variant.getAlt()));
 
-        Collections.sort(variants);
+        variants.sort(Variant.naturalOrder());
 
         List<VariantEvaluation> expected = Arrays.asList(zero, one, two, three, four);
 
-        System.out.println("Sorted:");
-        variants.forEach(variant -> System.out.printf("chr: %2d pos: %2d ref: %-2s alt: %-2s%n", variant.getChromosome(), variant.getPosition(), variant.getRef(), variant.getAlt()));
+//        System.out.println("Sorted:");
+//        variants.forEach(variant -> System.out.printf("chr: %2d pos: %2d ref: %-2s alt: %-2s%n", variant.getContigId(), variant
+//                .getStart(), variant.getRef(), variant.getAlt()));
         assertThat(variants, equalTo(expected));
     }
 
     private List<VariantEvaluation> scoredVariantsInDescendingRankOrder() {
-        VariantEvaluation zero = VariantEvaluation.builder(2, 1, "C", "TT")
+        VariantEvaluation zero = TestFactory.variantBuilder(2, 1, "C", "TT")
                 .variantEffect(VariantEffect.FRAMESHIFT_VARIANT)
                 .pathogenicityData(PathogenicityData.of(PolyPhenScore.of(1.0f)))
                 .build();
         zero.setContributesToGeneScoreUnderMode(ModeOfInheritance.AUTOSOMAL_DOMINANT);
-        VariantEvaluation one = VariantEvaluation.builder(2, 1, "C", "T")
+        VariantEvaluation one = TestFactory.variantBuilder(2, 1, "C", "T")
                 .variantEffect(VariantEffect.STOP_GAINED)
-                .frequencyData(FrequencyData.of(RsId.empty(), Frequency.of(FrequencySource.ESP_ALL, 0.02f)))
+                .frequencyData(FrequencyData.of(Frequency.of(FrequencySource.ESP_ALL, 0.02f)))
                 .pathogenicityData(PathogenicityData.of(PolyPhenScore.of(1.0f)))
                 .build();
         one.setContributesToGeneScoreUnderMode(ModeOfInheritance.AUTOSOMAL_DOMINANT);
-        VariantEvaluation two = VariantEvaluation.builder(1, 2, "A", "G")
+        VariantEvaluation two = TestFactory.variantBuilder(1, 2, "A", "G")
                 .variantEffect(VariantEffect.MISSENSE_VARIANT)
                 .build();
-        VariantEvaluation three = VariantEvaluation.builder(1, 2, "AC", "G")
+        VariantEvaluation three = TestFactory.variantBuilder(1, 2, "AC", "G")
                 .variantEffect(VariantEffect.MISSENSE_VARIANT)
                 .build();
-        VariantEvaluation four = VariantEvaluation.builder(1, 1, "A", "C")
+        VariantEvaluation four = TestFactory.variantBuilder(1, 1, "A", "C")
                 .variantEffect(VariantEffect.CODING_TRANSCRIPT_INTRON_VARIANT)
                 .build();
 
@@ -825,15 +823,15 @@ public class VariantEvaluationTest {
         List<VariantEvaluation> variants = scoredVariantsInDescendingRankOrder();
         Collections.shuffle(variants);
 
-        System.out.println("Shuffled:");
-        variants.forEach(variant -> System.out.printf("%s score: %3f chr: %2d pos: %2d ref: %-2s alt: %-2s%n", (variant.contributesToGeneScore() ? '*' : ' '), variant
-                .getVariantScore(), variant.getChromosome(), variant.getPosition(), variant.getRef(), variant.getAlt()));
+//        System.out.println("Shuffled:");
+//        variants.forEach(variant -> System.out.printf("%s score: %3f chr: %2d pos: %2d ref: %-2s alt: %-2s%n", (variant.contributesToGeneScore() ? '*' : ' '), variant
+//                .getVariantScore(), variant.contigId(), variant.start(), variant.ref(), variant.alt()));
 
         variants.sort(new VariantEvaluation.RankBasedComparator());
 
-        System.out.println("Sorted:");
-        variants.forEach(variant -> System.out.printf("%s score: %3f chr: %2d pos: %2d ref: %-2s alt: %-2s%n", (variant.contributesToGeneScore() ? '*' : ' '), variant
-                .getVariantScore(), variant.getChromosome(), variant.getPosition(), variant.getRef(), variant.getAlt()));
+//        System.out.println("Sorted:");
+//        variants.forEach(variant -> System.out.printf("%s score: %3f chr: %2d pos: %2d ref: %-2s alt: %-2s%n", (variant.contributesToGeneScore() ? '*' : ' '), variant
+//                .getVariantScore(), variant.contigId(), variant.start(), variant.ref(), variant.alt()));
         assertThat(variants, equalTo(scoredVariantsInDescendingRankOrder()));
     }
 
@@ -843,31 +841,80 @@ public class VariantEvaluationTest {
         List<VariantEvaluation> variants = scoredVariantsInDescendingRankOrder();
         Collections.shuffle(variants);
 
-        System.out.println("Shuffled:");
-        variants.forEach(variant -> System.out.printf("%s score: %3f chr: %2d pos: %2d ref: %-2s alt: %-2s%n", (variant.contributesToGeneScore() ? '*' : ' '), variant
-                .getVariantScore(), variant.getChromosome(), variant.getPosition(), variant.getRef(), variant.getAlt()));
+//        System.out.println("Shuffled:");
+//        variants.forEach(variant -> System.out.printf("%s score: %3f chr: %2d pos: %2d ref: %-2s alt: %-2s%n", (variant.contributesToGeneScore() ? '*' : ' '), variant
+//                .getVariantScore(), variant.contigId(), variant.start(), variant.ref(), variant.alt()));
 
         variants.sort(VariantEvaluation::compareByRank);
 
-        System.out.println("Sorted:");
-        variants.forEach(variant -> System.out.printf("%s score: %3f chr: %2d pos: %2d ref: %-2s alt: %-2s%n", (variant.contributesToGeneScore() ? '*' : ' '), variant
-                .getVariantScore(), variant.getChromosome(), variant.getPosition(), variant.getRef(), variant.getAlt()));
+//        System.out.println("Sorted:");
+//        variants.forEach(variant -> System.out.printf("%s score: %3f chr: %2d pos: %2d ref: %-2s alt: %-2s%n", (variant.contributesToGeneScore() ? '*' : ' '), variant
+//                .getVariantScore(), variant.contigId(), variant.start(), variant.ref(), variant.alt()));
         assertThat(variants, equalTo(scoredVariantsInDescendingRankOrder()));
     }
 
     @Test
     public void testToString() {
-        String expected = "VariantEvaluation{assembly=hg19 chr=1 pos=1 ref=C alt=T qual=2.2 SEQUENCE_VARIANT score=0.0 UNFILTERED failedFilters=[] passedFilters=[] compatibleWith=[] sampleGenotypes={sample=0/1}}";
-        System.out.println(instance);
+        String expected = "VariantEvaluation{assembly=hg19 chr=1 strand=+ start=1 end=1 length=1 ref=C alt=T id= qual=2.2 SNV SEQUENCE_VARIANT gene=GENE1 score=0.0 freqScore=1.0 pathScore=0.0 UNFILTERED failedFilters=[] passedFilters=[] compatibleWith=[] sampleGenotypes={sample=0/1}}";
         assertThat(instance.toString(), equalTo(expected));
     }
 
     @Test
     public void testToStringVariantContributesToGeneScore() {
-        String expected = "VariantEvaluation{assembly=hg19 chr=1 pos=1 ref=C alt=T qual=2.2 SEQUENCE_VARIANT * score=0.0 UNFILTERED failedFilters=[] passedFilters=[] compatibleWith=[] sampleGenotypes={sample=0/1}}";
+        String expected = "VariantEvaluation{assembly=hg19 chr=1 strand=+ start=1 end=1 length=1 ref=C alt=T id= qual=2.2 SNV SEQUENCE_VARIANT gene=GENE1 * score=0.0 freqScore=1.0 pathScore=0.0 UNFILTERED failedFilters=[] passedFilters=[] compatibleWith=[] sampleGenotypes={sample=0/1}}";
         instance.setContributesToGeneScoreUnderMode(ModeOfInheritance.ANY);
-        System.out.println(instance);
         assertThat(instance.toString(), equalTo(expected));
+    }
+
+    @Test
+    void testToGnomadSnv() {
+        assertThat(instance.toGnomad(), equalTo("1-1-C-T"));
+    }
+
+    @Test
+    void testToGnomadSvIns() {
+        VariantEvaluation sv = newBuilder(1, 100, 100, "A", "<INS>", 50)
+                .build();
+        assertThat(sv.toGnomad(), equalTo("1-100-100-A-<INS>"));
+    }
+
+    @ParameterizedTest
+    @CsvSource({
+            "1,   1bp",
+            "8,   8bp",
+            "87,    87bp",
+            "876,    876bp",
+            "1000,    1.0kb",
+            "8765,    8.7kb",
+            "10000,    10.0kb",
+            "87654,    87.6kb",
+            "99999,    99.9kb",
+            "100000,    100.0kb",
+            "100001,    100.0kb",
+            "100199,    100.1kb",
+            "876543,    876.5kb",
+            "1000000,    1.0Mb",
+            "8765432,    8.7Mb",
+            "100000000,    100.0Mb",
+            "876543210,    876.5Mb",
+            "1000000000,    1.0Gb",
+            "1000000001,    1.0Gb",
+            "2147483647,    2.1Gb",
+    })
+    void lengthFormat(int changeLength, String expected) {
+        VariantEvaluation sv = newBuilder(1, 100, 100, "A", "<INS>", changeLength).build();
+        assertThat(sv.changeLengthString(), equalTo(expected));
+    }
+
+    private String toGnomadWithLength(VariantEvaluation.Builder sv, int length) {
+        return newBuilder(1, 100, 100, "A", "<INS>", length).build().toGnomad();
+    }
+
+    @Test
+    void testToGnomadSvDel() {
+        VariantEvaluation sv = newBuilder(1, 100, 150, "A", "<DEL>", -50)
+                .build();
+        assertThat(sv.toGnomad(), equalTo("1-100-150-A-<DEL>"));
     }
 
     @Test
@@ -919,5 +966,61 @@ public class VariantEvaluationTest {
 
         assertThat(instance.getPathogenicityScore(), equalTo(1f));
         assertThat(instance.isPredictedPathogenic(), equalTo(true));
+    }
+
+    @Test
+    void testLengthUsesAllelesIfNotSetSnp() {
+        VariantEvaluation zero = newBuilder(2, 1, "C", "T")
+                .build();
+        assertThat(zero.length(), equalTo(1));
+        assertThat(zero.changeLength(), equalTo(0));
+    }
+
+    @Test
+    void testLengthUsesAllelesIfNotSetInsertion() {
+        VariantEvaluation zero = newBuilder(2, 1, "C", "TTT")
+                .build();
+        assertThat(zero.changeLength(), equalTo(2));
+    }
+
+    @Test
+    void testLengthUsesAllelesIfNotSetDeletion() {
+        VariantEvaluation zero = newBuilder(2, 1, "CTA", "T")
+                .build();
+        assertThat(zero.changeLength(), equalTo(-2));
+    }
+
+    @Test
+    void testLengthUsesAllelesIfNotSetMnv() {
+        VariantEvaluation zero = newBuilder(2, 1, "CTA", "TCG")
+                .build();
+        assertThat(zero.length(), equalTo(3));
+    }
+
+    @Test
+    void testEndUsesAllelesIfNotSet() {
+        VariantEvaluation zero = newBuilder(2, 1, "C", "TTT")
+                .build();
+        assertThat(zero.end(), equalTo(1));
+
+        VariantEvaluation one = newBuilder(2, 1, "C", "T")
+                .build();
+        assertThat(one.end(), equalTo(1));
+    }
+
+    @Test
+    void throwsExceptionIfChangeLengthOfStructuralVariantNotProvided() {
+        assertThrows(IllegalArgumentException.class, () -> newBuilder(2, 1, "C", "<INS>").build());
+    }
+
+    @Test
+    void testLengthOfStructuralVariantCanBeSet() {
+        // TODO this is all mixed-up with the newer VariantAllele which is a very minor extension of the variant-api Variant.
+        //  It might be easier to compose the VariantEvaluation with a VariantAllele and have an AnnotatedVariant interface and remove the Builders
+        //  check the VariantFactoryImpl, SmallVariantAnnotator and
+        VariantEvaluation sv = newBuilder(2, 1, 1, "C", "<INS>", 12345)
+                .build();
+        assertThat(sv.end(), equalTo(1));
+        assertThat(sv.changeLength(), equalTo(12345));
     }
 }
